# db_gerador

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py
backend/agents/: __init__.py  base.py  diagram.py  migration.py  modeling.py  openproject_agent.py  performance.py  project_analysis.py  security.py
backend/agents/knowledge/: __init__.py  database_patterns.py
backend/api/: __init__.py  dependencies.py  middleware.py  schemas.py
backend/api/routes/: __init__.py  analysis.py
backend/domain/: __init__.py  enums.py  exceptions.py
backend/domain/models/: __init__.py  analysis.py  artifacts.py  database.py  ir.py  openproject.py  recommendations.py  schema.py
backend/observability/: __init__.py  logging.py
backend/persistence/: __init__.py  database.py  models.py
backend/persistence/migrations/: env.py
backend/persistence/migrations/versions/: 20260101_0001_initial.py
backend/repositories/: __init__.py  analysis_repository.py
backend/security/: __init__.py  credentials.py  sanitizer.py
backend/services/: __init__.py
backend/services/database/: __init__.py  connector.py  introspector.py
backend/services/llm/: __init__.py  gemini.py
backend/services/openproject/: __init__.py  attachment_service.py  client.py  task_service.py
backend/services/rendering/: __init__.py  mermaid.py  sql_generator.py
backend/tests/: conftest.py
backend/tests/unit/: test_config.py  test_credential_vault.py  test_mermaid_renderer.py  test_sanitizer.py  test_sql_generator.py
backend/workflows/: __init__.py  checkpointer.py  engine.py  graph.py  nodes.py  state.py
db_gerador.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
