[project]
name = "db-gerador"
version = "0.1.0"
description = "AI-powered database architecture analysis backend with Gemini + LangGraph + OpenProject"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "db_gerador team" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Validation / config
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Workflow orchestration
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # Persistence
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "psycopg[binary,pool]>=3.2.0",

    # Optional drivers for client database introspection
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "aioodbc>=0.5.0",

    # HTTP / integrations
    "httpx>=0.27.0",

    # Security
    "cryptography>=43.0.0",

    # Observability
    "structlog>=24.4.0",

    # Utilities
    "python-multipart>=0.0.12",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
